# mpris-over-http

./: .gitignore  Cargo.toml
ft/: index.html  main.ts
src/: error.rs  main.rs
