[package]
name = "mpris-over-http"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
mpris = "2.0.1"
reqwest = { version = "0.12.8", features = ["stream"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tokio-util = "0.7.12"
tower-http = { version = "0.6.1", features = ["fs"] }
