[package]
name = "mpris-over-http"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["macros"] }
bytes = "1.7.2"
clap = { version = "4.5.19", features = ["derive"] }
env_logger = "0.11.5"
futures = "0.3.30"
http = "1.1.0"
log = { version = "0.4.22", features = ["std"] }
mpris = "2.0.1"
reqwest = { version = "0.12.8", features = ["stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tokio-util = "0.7.12"
tower-http = { version = "0.6.1", features = ["fs"] }
